# OrbitalThrusterEnv

./: .dockerignore  .env.example  .gitignore  .hfignore  .upload_ignore  BLOG.md  BLOG_POST_DRAFT.md  BUILD_COMPLETE.md  CLAUDE.md  Dockerfile  INDEX.md  QUICKSTART.md  README.md  SUBMIT.md  __init__.py  client.py  final.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  results.md  skills-lock.json  themes.md  validate.py
docs/: HACKATHON_PLAN.md  MODEL_OPTIONS.md
orbital_thruster_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/baseline_eval/: baseline_summary.csv
outputs/eval_trained/: trained_vs_baseline.csv
outputs/training/: grpo_metrics.csv
scripts/: select_model.py  setup_deps.ps1  zero_shot_rollouts.py
server/: __init__.py  app.py  dynamics.py  env.py  graders.py  main.py  models.py  orbital_thruster_environment.py  requirements.txt  reward.py  tasks.py
server/tasks/: __init__.py  base.py  task_easy.py  task_flagship.py  task_hard.py  task_medium.py
test_env/: Dockerfile  README.md
test_env/server/: app.py
tests/: conftest.py  test_baseline_regression.py  test_mission_ops_env.py
trainer_output_remote/: .gitattributes  README.md
training/: README.md  common.py  eval_trained_model.py  evaluate_baselines.py  generate_seed_trajectories.py  grpo_colab_template.py  hf_job_train.py  local_train.py  qwen3_grpo_train.py  qwen3_smoke_sft.py  requirements.txt  rl_utils.py  train_orbital_grpo.ipynb
training/data/: seed_trajectories.jsonl
(+17 files in other folders)
