[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-thruster-env"
version = "1.0.0"
description = "OpenEnv benchmark for fuel-aware spacecraft attitude control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "openai>=1.20.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["models", "client"]
packages = ["server", "server.tasks"]
